# reel-filter

./: .dockerignore  .gitignore  COMPLETION_REPORT.md  FINAL_SUMMARY.txt  FRONTEND_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_FRONTEND_TASKS.md  docker-compose.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_indexes.py
backend/scripts/: manual_refresh.py  seed_test_data.py
backend/src/: __init__.py  main.py
backend/src/api/middleware/: error_handler.py  logging.py  performance.py
backend/src/api/routes/: health.py  metadata.py  movies.py
backend/src/api/schemas/: movie.py  search.py
backend/src/database/: base.py  session.py
backend/src/integrations/: __init__.py  kim_scraper.py  omdb_client.py
backend/src/jobs/: __init__.py  celery_app.py  weekly_refresh.py
backend/src/models/: __init__.py  content_score.py  data_refresh_log.py  movie.py
backend/src/services/: matching_service.py  movie_service.py  search_service.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: ContentBadge.tsx  ErrorBoundary.tsx  FilterPanel.tsx  LoadingSpinner.tsx  MovieCard.tsx  (+2 more)
specs/001-movie-content-search/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
